chore: Fixed broken component documentation.